ajuste swagger documentation
